# trotro-optimizer

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  keepalive.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: apply.py  auth.py  config.py  database.py  loader.py  main.py  models.py  redis_client.py  schemas.py  seed.py  services.py  trust.py
backend/app/routers/: contributions.py  meta.py  moderation.py  routes.py  stations.py  sync.py
backend/app/routing/: engine.py  geo.py
backend/migrations/: 0001_init.sql
backend/scripts/: init_db.py
backend/tests/: test_engine.py  test_trust.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/src/app/contribute/: page.tsx
frontend/src/components/: MapView.tsx
frontend/src/engine/: engine.test.ts  engine.ts
frontend/src/lib/: api.ts  contribute.ts  db.ts  planner.ts  sync.ts  types.ts
seed/: accra.json
